--- a/public/patterns.html
+++ b/public/patterns.html
@@ -13,9 +13,50 @@
 
   <body>
 
-    <div class="container">
+    <div class="container page--patterns">
 
-      <h1>CTL Patterns</h1>
+      <div class="page-header">
+        <h1>CTL Patterns</h1>
+      </div>
+
+      <h2>Main Elements</h2>
+
+      <h3>Colors</h3>
+
+      <div class="row">
+        <div class="col-xs-6 col-md-3">
+          <div class="color-block color-block--red">
+          </div>
+          <div class="color-block__titles">
+            <h4>Red</h4>
+            <code>#ed1a34</code>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <div class="color-block color-block--red">
+          </div>
+          <div class="color-block__titles">
+            <h4>Red</h4>
+            <code>#ed1a34</code>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <div class="color-block color-block--red">
+          </div>
+          <div class="color-block__titles">
+            <h4>Red</h4>
+            <code>#ed1a34</code>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <div class="color-block color-block--red">
+          </div>
+          <div class="color-block__titles">
+            <h4>Red</h4>
+            <code>#ed1a34</code>
+          </div>
+        </div>
+      </div>
 
     </div><!-- /.container -->
   </body>
