Builds main elements

--- a/public/patterns.html
+++ b/public/patterns.html
@@ -19,9 +19,9 @@
         <h1>CTL Patterns</h1>
       </div>
 
-      <h2>Main Elements</h2>
+      <h2 class="section-header--h2">Main Elements</h2>
 
-      <h3>Colors</h3>
+      <h3 class="section-header--h3">Colors</h3>
 
       <div class="row">
         <div class="col-xs-6 col-md-3">
@@ -29,32 +29,90 @@
           </div>
           <div class="color-block__titles">
             <h4>Red</h4>
-            <code>#ed1a34</code>
+            <code>$brand-primary, #ed1a34</code>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="color-block color-block--red">
+          <div class="color-block color-block--black">
           </div>
           <div class="color-block__titles">
-            <h4>Red</h4>
-            <code>#ed1a34</code>
+            <h4>Black</h4>
+            <code>$black, #222222</code>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="color-block color-block--red">
+          <div class="color-block color-block--brand-gray">
           </div>
           <div class="color-block__titles">
-            <h4>Red</h4>
-            <code>#ed1a34</code>
+            <h4>Gray</h4>
+            <code>$brand-gray, #cccccc</code>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="color-block color-block--red">
+          <div class="color-block color-block--blue">
           </div>
           <div class="color-block__titles">
-            <h4>Red</h4>
-            <code>#ed1a34</code>
+            <h4>Blue</h4>
+            <code>$blue, #87cefa</code>
           </div>
+        </div>
+      </div>
+
+      <h3>Headings</h3>
+
+      <div class="row">
+        <div class="col-xs-12 headings">
+          <span>hero heading</span>
+          <h1>h1. heading</h1>
+          <h2>h2. heading</h2>
+          <h3>h3. heading</h3>
+          <h4>h4. heading</h4>
+          <h5>h5. heading</h5>
+          <h6>h6. heading</h6>
+        </div>
+      </div>
+
+      <h3>Inline Elements</h3>
+
+      <div class="row">
+        <div class='col-xs-12 inline-elements'>
+          <p>You can help a young person <strong>in crisis</strong>. If you are
+            <mark>willing to listen</mark> and you <em>text in your personal life</em>,
+            you have what it takes to be a great Crisis Text Line Volunteer.</p>
+          <p>This is a <a href="#">link</a>, this is a <a class="secondary" href="#">secondary link.</a></p>
+        </div>
+      </div>
+
+      <h3>Font Families</h3>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 font--roboto">
+          <span>Roboto</span>
+          <p>Should be used as the base body copy, and some headings</p>
+          <code>$font-family-base</code>
+        </div>
+        <div class="col-xs-12 col-md-6 font--oswald">
+          <span>Oswald</span>
+          <p>Should be used for smaller headings, like section identifiers</p>
+          <code>$font-family-decor</code>
+        </div>
+        <div class="col-xs-12 example-pairing">
+          <span>This is an example</span>
+          <p>Of how these fonts should be paired</p>
+          <code>$weight-light, $weight-black</code>
+        </div>
+      </div>
+
+      <h3>Typography</h3>
+
+      <div class="row">
+        <div class='col-xs-12 typography__block-quote'>
+          <h4>Blockquote</h4>
+          <blockquote cite="www.google.com">
+            <p>We bring a new technology to an old problem. Our specialists practice active listening to help texters in crisis move from a hot moment to a cool calm – all through a medium they know and trust: text.</p>
+            <p>Crisis Text Line is free, 24/7 emotional support for those in crisis.</p>
+            <cite>Citation goes here</cite>
+          </blockquote>
         </div>
       </div>
 
