Builds pull quote, ol

--- a/public/patterns.html
+++ b/public/patterns.html
@@ -105,15 +105,42 @@
 
       <h3>Typography</h3>
 
-      <div class="row">
-        <div class='col-xs-12 typography__block-quote'>
-          <h4>Blockquote</h4>
-          <blockquote cite="www.google.com">
-            <p>We bring a new technology to an old problem. Our specialists practice active listening to help texters in crisis move from a hot moment to a cool calm – all through a medium they know and trust: text.</p>
-            <p>Crisis Text Line is free, 24/7 emotional support for those in crisis.</p>
-            <cite>Citation goes here</cite>
-          </blockquote>
+        <div class="row typography">
+          <div class='col-xs-12 typography__cite'>
+            <h4>Citation</h4>
+            <cite>-- Nancy Lublin</cite>
+          </div>
         </div>
+
+        <div class="row typography">
+          <div class='col-xs-12 typography__block-quote'>
+            <h4>Blockquote</h4>
+            <blockquote cite="www.google.com">
+              <p>We bring a new technology to an old problem. Our specialists practice active listening to help texters in crisis move from a hot moment to a cool calm – all through a medium they know and trust: text.</p>
+              <p>Crisis Text Line is free, 24/7 emotional support for those in crisis.</p>
+              <cite>Citation goes here</cite>
+            </blockquote>
+          </div>
+        </div>
+
+        <div class="row typography">
+          <div class='col-xs-12 typography__pull-quote'>
+            <h4>Pull Quote</h4>
+            <q class="pull-quote">Fight for the texter</q>
+          </div>
+        </div>
+
+        <div class="row typography">
+          <div class='col-xs-12 typography__ol'>
+            <h4>Ordered Lists</h4>
+            <ol>
+              <li>List Item 1</li>
+              <li>List Item 2</li>
+              <li>List Item 3</li>
+            </ol>
+          </div>
+        </div>
+
       </div>
 
     </div><!-- /.container -->
