--- a/public/patterns.html
+++ b/public/patterns.html
@@ -104,6 +104,17 @@
         </div>
       </div>
 
+      <h3>Images</h3>
+
+      <div class="row">
+        <div class='col-xs-12 images'>
+          <h4>Responsive Images</h4>
+          <img src="http://www.fillmurray.com/600/600">
+          <h4>Circular Images</h4>
+          <img src="http://fillmurray.com/200/300" class="circle-crop murray-placeholder">
+        </div>
+      </div>
+
       <h3>Typography</h3>
 
         <div class="row typography">
