Begins table styling

--- a/public/patterns.html
+++ b/public/patterns.html
@@ -260,6 +260,56 @@
           </div>
         </div>
 
+        <h3 class="section-header--h3">Tables</h3>
+
+        <div class="row components">
+            <div class="col-xs-12 table-settings">
+              <table class="table--default">
+                <caption>This is a table caption</caption>
+                <thead>
+                  <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                    <th>Column 3</th>
+                    <th>Column 4</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Row 1</th>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Row 2</th>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Row 3</th>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Row 4</th>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Row 5</th>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                  </tr>
+                </tbody>
+              </table>
+          </div>
+        </div>
+
         <h3 class="section-header--h3">Message</h3>
 
         <div class="row">
