--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Lesson Templates</a></li>
+            <li><a href="#contact">Quiz Template</a></li>
+            <li><a href="#contact">Conversation Template</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -36,11 +36,82 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        <h2>Icons</h2>
-        <p><i class="fa fa-rocket"></i></p>
+      <div class="lesson-template">
+        <h2>Lesson Templates</h2>
+        <h3>Title Page</h3>
+        <div class="template--base template--title-page">
+          <span class="lesson__module-name">Module Name Goes Here</span>
+          <div class="titles">
+            <span class="intro">Lesson #</span>
+            <h2 class="lesson__title">This is the Title of the Lesson</h2>
+          </div>
+          <img src="images/speech-bubble-01.svg">
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Text</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">This is the Page Title</h1>
+          </div>
+          <div class="content">
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+            <h2>This is a heading</h2>
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+            <h3>This is a smaller heading</h3>
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Text</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">This is the Page Title</h1>
+          </div>
+          <div class="content">
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+            <h2>This is a heading</h2>
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+            <h3>This is a smaller heading</h3>
+            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
       </div>
 
     </div><!-- /.container -->
