--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">Lesson Templates</a></li>
-            <li><a href="#contact">Quiz Template</a></li>
-            <li><a href="#contact">Conversation Template</a></li>
+            <li><a href="#lesson">Lesson Templates</a></li>
+            <li><a href="#quiz">Quiz Template</a></li>
+            <li><a href="#convo">Conversation Template</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -37,7 +37,7 @@
     <div class="container">
 
       <div class="lesson-template">
-        <h2>Lesson Templates</h2>
+        <a name="lesson"><h2>Lesson Templates</h2></a>
         <h3>Title Page</h3>
         <div class="template--base template--title-page">
           <span class="lesson__module-name">Module Name Goes Here</span>
@@ -87,17 +87,25 @@
       </div>
 
       <div class="lesson-template">
-        <h3>Internal Page - Text</h3>
+        <h3>Internal Page - UL</h3>
         <div class="template--base template--internal-page">
           <div class="titles">
             <h1 class="page__title">This is the Page Title</h1>
           </div>
           <div class="content">
-            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
-            <h2>This is a heading</h2>
-            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
-            <h3>This is a smaller heading</h3>
-            <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+            <p class="large">Unordered lists can be styled like headings for emphasis. This should depend on the importance of the list and amount of text.</p>
+            <ul class="h2">
+              <li>h2 Item</li>
+              <li>h2 Item</li>
+            </ul>
+            <ul class="h3">
+              <li>h3 Item</li>
+              <li>h3 Item</li>
+            </ul>
+            <ul class="large">
+              <li>Large Item</li>
+              <li>Large Item</li>
+            </ul>
           </div>
         </div>
         <div class="slide-actions">
@@ -111,6 +119,141 @@
         </div>
         <div class="closed-caption">
           <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Pull Quote</h3>
+        <div class="template--base template--internal-page">
+          <div class="content">
+            <div class="centered">
+              <q class="pull-quote">This is a pull quote</q>
+              <cite>-- Citation</cite>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Full Image</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">Ideal image size is 450px tall</h1>
+          </div>
+          <div class="content">
+            <div class="image">
+              <img src="http://i.ytimg.com/vi/OGmGDZGj0pQ/maxresdefault.jpg">
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Image + Text</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">This is the Page Title</h1>
+          </div>
+          <div class="content">
+            <div class="half">
+              <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
+              <ul class="h3">
+                <li>h3 Item</li>
+                <li>h3 Item</li>
+                <li>h3 Item</li>
+                <li>h3 Item</li>
+                <li>h3 Item</li>
+                <li>h3 Item</li>
+              </ul>
+            </div>
+          <div class="half">
+            <img src="http://www.fillmurray.com/550/450">
+        </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Full Video</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">Videos are 800px Wide, 450px Tall</h1>
+          </div>
+          <div class="content">
+            <div class="video">
+              <iframe width="800" height="450" src="https://www.youtube.com/embed/qOYnLFjYCng" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="quiz-template">
+        <a name="quiz"><h2>Quiz Templates</h2></a>
+        <h3>Quiz Question</h3>
+        <div class="template--base template--title-page template--quiz">
+          <span class="lesson__module-name">Module Name Goes Here</span>
+          <div class="titles">
+            <span class="intro">Quiz</span>
+            <h2 class="lesson__title">This is the Quiz You Better Believe It</h2>
+          </div>
+          <img src="images/speech-bubble--gray.svg">
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
         </div>
       </div>
 
