Adds subtitles, adjusts quiz questions

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
         <div class="template--base template--internal-page">
           <div class="titles">
             <h1 class="page__title">This is the Page Title</h1>
+            <h2 class="page__subtitle">This is the Subtitle</h2>
           </div>
           <div class="content">
             <p class="large">Not everyone is ready to problem solve, so it’s important that we clarify the kind of help the individual seeks.</p>
@@ -237,14 +238,48 @@
 
       <div class="quiz-template">
         <a name="quiz"><h2>Quiz Templates</h2></a>
-        <h3>Quiz Question</h3>
-        <div class="template--base template--title-page template--quiz">
+        <h3>Quiz Titles</h3>
+        <div class="template--base template--title-page template--quiz__titles">
           <span class="lesson__module-name">Module Name Goes Here</span>
           <div class="titles">
             <span class="intro">Quiz</span>
             <h2 class="lesson__title">This is the Quiz You Better Believe It</h2>
           </div>
           <img src="images/speech-bubble--gray.svg">
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="quiz-template">
+        <a name="quiz"><h2>Quiz Templates</h2></a>
+        <h3>Quiz Question</h3>
+        <div class="template--base template--internal-page template--quiz">
+          <div class="titles">
+            <h1 class="page__title">This is the quiz question. It goes up here.</h1>
+          </div>
+          <div class="content">
+            <form class="h3">
+                <input id="option5" type="radio">
+                <label class="radio" for="option5"> Option 1 </label>
+
+                <input id="option6" type="radio" >
+                <label class="radio" for="option6"> Option 2 </label>
+
+                <input id="option7" type="radio" >
+                <label class="radio" for="option7"> Option 3 </label>
+
+                <input id="option8" type="radio" >
+                <label class="radio" for="option8"> Option 4 </label>
+            </form>
+          </div>
         </div>
         <div class="slide-actions">
           <div class="slide-actions__btn-group">
