Adds speech bubble component

--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,36 @@
       </div>
 
       <div class="lesson-template">
+        <h3>Internal Page - Speech Bubbles</h3>
+        <div class="template--base template--internal-page">
+          <div class="content">
+            <div class="half--centered">
+              <div class="c-speech-bubbles c-speech-bubbles--teen">
+                <p>I’m feeling so depressed and alone. My girlfriend won’t respond to my texts to apologize after our fight yesterday.</p>
+              </div>
+              <span class="texter__name texter__name--user">Text from User</span>
+              <div class="c-speech-bubbles c-speech-bubbles--ctl">
+                <p>It sounds like you’re feeling depressed and alone because you aren’t hearing back from your girlfriend after the fight.</p>
+              </div>
+              <span class="texter__name texter__name--ctl">Text from CTL</span>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
         <h3>Internal Page - Full Image</h3>
         <div class="template--base template--internal-page">
           <div class="titles">
