--- a/public/patterns.html
+++ b/public/patterns.html
@@ -321,6 +321,21 @@
           </div>
         </div>
 
+        <h3 class="section-header--h3">Speech Bubbles</h3>
+
+        <div class="row">
+          <div class="col-xs-12 col-xs-12 col-md-6">
+            <div class="c-speech-bubbles c-speech-bubbles--teen">
+              <p>I’m feeling so depressed and alone. My girlfriend won’t respond to my texts to apologize after our fight yesterday.</p>
+            </div>
+            <span class="texter__name texter__name--user">Text from User</span>
+            <div class="c-speech-bubbles c-speech-bubbles--ctl">
+              <p>It sounds like you’re feeling depressed and alone because you aren’t hearing back from your girlfriend after the fight.</p>
+            </div>
+            <span class="texter__name texter__name--ctl">Text from CTL</span>
+          </div>
+        </div>
+
       </div>
 
     </div><!-- /.container -->
