Adds full background images and videos, adjusts message component and quiz answers

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
           <ul class="nav navbar-nav">
             <li><a href="#lesson">Lesson Templates</a></li>
             <li><a href="#quiz">Quiz Template</a></li>
-            <li><a href="#convo">Conversation Template</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -161,6 +160,9 @@
               </div>
               <span class="texter__name texter__name--ctl">Text from CTL</span>
             </div>
+            <div class="full-width">
+              <p class="large">This is more information about the conversation you see above.</p>
+            </div>
           </div>
         </div>
         <div class="slide-actions">
@@ -178,7 +180,7 @@
       </div>
 
       <div class="lesson-template">
-        <h3>Internal Page - Full Image</h3>
+        <h3>Internal Page - Image w/ Title</h3>
         <div class="template--base template--internal-page">
           <div class="titles">
             <h1 class="page__title">Ideal image size is 450px tall</h1>
@@ -202,6 +204,25 @@
           <p>This is where you put closed caption text.</p>
         </div>
       </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Full-Screen Image</h3>
+        <div class="template--base template--internal-page template--full-background">
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
 
       <div class="lesson-template">
         <h3>Internal Page - Image + Text</h3>
@@ -241,14 +262,72 @@
       </div>
 
       <div class="lesson-template">
-        <h3>Internal Page - Full Video</h3>
+        <h3>Internal Page - Image + Text</h3>
         <div class="template--base template--internal-page">
           <div class="titles">
-            <h1 class="page__title">Videos are 800px Wide, 450px Tall</h1>
+            <h1 class="page__title">This is the Page Title</h1>
+          </div>
+          <div class="content">
+            <div class="third">
+              <img src="http://www.fillmurray.com/250/300">
+              <cite>This is a citation</cite>
+            </div>
+            <div class="third">
+              <img src="http://www.fillmurray.com/250/300">
+              <p class="large">This is a large paragraph</cite>
+            </div>
+            <div class="third">
+              <img src="http://www.fillmurray.com/250/300">
+              <h3>This is a h3</h3>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Video with Title</h3>
+        <div class="template--base template--internal-page">
+          <div class="titles">
+            <h1 class="page__title">Videos are 800px Wide, 450px Tall if 16:9</h1>
           </div>
           <div class="content">
             <div class="video">
               <iframe width="800" height="450" src="https://www.youtube.com/embed/qOYnLFjYCng" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+        <div class="closed-caption">
+          <p>This is where you put closed caption text.</p>
+        </div>
+      </div>
+
+      <div class="lesson-template">
+        <h3>Internal Page - Full Video</h3>
+        <div class="template--base template--internal-page template--full-video">
+          <div class="content">
+            <div class="video">
+              <iframe src="https://player.vimeo.com/video/123206278" width="1180" height="663" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -293,22 +372,51 @@
         <h3>Quiz Question</h3>
         <div class="template--base template--internal-page template--quiz">
           <div class="titles">
-            <h1 class="page__title">This is the quiz question. It goes up here.</h1>
+            <h1 class="quiz__title">A texter shares that he is furious because his best friend told his parents that he’s been cutting. Now they're making an appointment for him to see a counselor. He thinks it's fine and doesn't want to stop, but he does want to talk about how he feels betrayed by his friend and parents. What do you do?</h1>
           </div>
           <div class="content">
             <form class="h3">
                 <input id="option5" type="radio">
-                <label class="radio" for="option5"> Option 1 </label>
+                <label class="radio" for="option5">Determine alternative coping methods instead of cutting</label>
 
                 <input id="option6" type="radio" >
-                <label class="radio" for="option6"> Option 2 </label>
+                <label class="radio" for="option6">Share a referral that could help him stop cutting</label>
 
                 <input id="option7" type="radio" >
-                <label class="radio" for="option7"> Option 3 </label>
+                <label class="radio" for="option7">Validate the texter's feelings and explore the problem as they define it </label>
 
                 <input id="option8" type="radio" >
-                <label class="radio" for="option8"> Option 4 </label>
+                <label class="radio" for="option8">Explore the reasons why he doesn't want to stop</label>
             </form>
+            <div class="quiz__submit">
+              <button class="primary">Submit</button>
+            </div>
+          </div>
+        </div>
+        <div class="slide-actions">
+          <div class="slide-actions__btn-group">
+            <span class="fa fa-arrow-circle-left"></span>
+            <span class="fa fa-play"></span>
+            <span class="fa fa-pause"></span>
+            <span class="fa fa-stop"></span>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="quiz-template">
+        <h3>Answer Explanation</h3>
+        <div class="template--base template--internal-page template--quiz template--quiz__answer">
+          <div class="content">
+            <span class="answer-title">Your Answer:</span>
+            <span class="answer user-answer">This is your answer text</span>
+            <span class="answer-title">Correct Answer:</span>
+            <span class="answer correct-answer">This is the correct answer</span>
+            <blockquote>
+              <p class="large"><em>Why this is the right answer</em></p>
+              <p>This is why this is the right answer. There are many reasons.</p>
+              <p>Do you remember talking about this? I do. It was <a href="#">in this section.</a></p>
+            </blockquote>
           </div>
         </div>
         <div class="slide-actions">
