--- a/public/patterns.html
+++ b/public/patterns.html
@@ -314,8 +314,16 @@
 
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <div class="message">
-              <p><span class="fa fa-exclamation-triangle"></span>Remember to do this thing.</p>
+            <div class="message message--warning">
+              <p><span class="fa fa-exclamation-triangle"></span>This is a warning.</p>
+              <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
+            </div>
+            <div class="message message--error">
+              <p><span class="fa fa-exclamation-triangle"></span>This is an error.</p>
+              <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
+            </div>
+            <div class="message message--info">
+              <p><span class="fa fa-info-circle"></span>This is just information.</p>
               <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
             </div>
           </div>
