minor class-name css selector tweaks to messages css

--- a/public/patterns.html
+++ b/public/patterns.html
@@ -315,15 +315,15 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <div class="message message--warning">
-              <p><span class="fa fa-exclamation-triangle"></span>This is a warning.</p>
+              <p class="message-inner"><span class="message-icon fa fa-exclamation-triangle"></span>This is a warning.</p>
               <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
             </div>
             <div class="message message--error">
-              <p><span class="fa fa-exclamation-triangle"></span>This is an error.</p>
+              <p class="message-inner"><span class="message-icon fa fa-exclamation-triangle"></span>This is an error.</p>
               <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
             </div>
             <div class="message message--info">
-              <p><span class="fa fa-info-circle"></span>This is just information.</p>
+              <p class="message-inner"><span class="message-icon fa fa-info-circle"></span>This is just information.</p>
               <button id="message-btn-close"><i class="fa fa-times fa-2x"></i></button>
             </div>
           </div>
